# python-project-manage

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: create-relese.yml  deploy-docs.yml  test.yaml
site/: 404.html  index.html
src/example/: hello.py
